# storymaker_app

./: .env.defaults  README.md  SETUP_VERIFICATION.md  STORYMAKER_RENAME_SUMMARY.md  example_env_file.sh  openrouter_model_list.json  pnpm-lock.yaml  pyproject.toml  test_complete_workflow.py  test_frontend_gating.md  test_phase3_5_workflow.py
docs/: 04_phase3_5_complete.md  05_complete_implementation.md  storymaker_usage.md  systemawriter_usage.md
docs/guides/: 01_buildout.md  02_expanded.md  03_expanded.md  04_v1.md  06_frontend_gating.md  07.9_overview_doc.md  07_v2_cleanui_pt1.md  07_v2_cleanui_pt2.md  08_fixes_for_v2.md  08_fixes_for_v2_p2.md  08_fixes_for_v2_p3.md  09_styling_and_changes.md  10_bugfixes.md  README_feature_slices.md
repo_src/backend/: main.py  package.json  requirements.txt
repo_src/backend/data/: systemawriter_schemas.py
repo_src/backend/database/: models.py
repo_src/backend/routers/: systemawriter_router.py
repo_src/backend/systemawriter_logic/: __init__.py  core_logic.py  llm_interface.py  prompts.py
repo_src/backend/tests/: test_database.py
repo_src/frontend/: package.json
repo_src/frontend/src/: App.tsx  main.tsx
repo_src/frontend/src/components/: ItemList.tsx  LoadingSpinner.css  LoadingSpinner.tsx
repo_src/frontend/src/components/systemawriter/: ConceptTab.tsx  DocumentEditor.tsx  FullStoryReviewTab.tsx  OutlineTab.tsx  PrerequisiteWarningModal.tsx  ProjectSetupTab.tsx  SceneBreakdownTab.tsx  SceneWritingTab.tsx  StorymakerLeftPanel.tsx  WorldbuildingTab.tsx
repo_src/frontend/src/contexts/: ProjectContext.tsx
repo_src/frontend/src/pages/: HomePage.tsx  ItemManagementPage.tsx  SystemaWriterPage.tsx
repo_src/frontend/src/services/: systemaWriterService.ts
repo_src/frontend/src/styles/: App.css  Modal.css  StorymakeTabs.css  Storymaker.css  StorymakerLayout.css  StorymakerTabs.css  SystemaWriter.css  theme.css
repo_src/scripts/: setup-env.sh
